--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,7 +26,7 @@ jobs:
           bundler-cache: true
       - name: Install and Build
         run: |
-          gem install jekyll jekyll-seo-tag jekyll-feed
+          gem install jekyll jekyll-seo-tag jekyll-feed jekyll-remote-theme
           jekyll build -d _site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
