--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,7 +26,9 @@ jobs:
           bundler-cache: true
       - name: Install and Build
         run: |
-          gem install jekyll jekyll-seo-tag jekyll-feed jekyll-remote-theme
+          gem uninstall jekyll-sass-converter -aIx || true
+          gem install jekyll-sass-converter -v 3.0.0
+          gem install jekyll jekyll-seo-tag jekyll-feed jekyll-remote-theme -v 0.4.3
           jekyll build -d _site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
