--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,20 +19,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.3'
           bundler-cache: true
+
       - name: Install and Build
         run: |
-            gem uninstall jekyll-sass-converter -aIx || true
-            gem install jekyll-sass-converter -v 3.0.0
-            gem install jekyll -v 4.4.1
-            gem install jekyll-seo-tag -v 2.8.0
-            gem install jekyll-feed -v 0.17.0
-            gem install jekyll-remote-theme -v 0.4.3
-            jekyll build -d _site
+          bundle install
+          bundle exec jekyll build -d _site
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
